kustomizes/demo-sxapi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-sxapi
  labels:
    manual: inline
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: demo-sxapi
